# kestrel

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  xcode.sh
include/: class.hpp  compiler.hpp  function.hpp  instruction_array.hpp  list.hpp  module.hpp  opcodes.hpp  statement.hpp  value.hpp
include/core/: classes.hpp  core.hpp  map.hpp  object.hpp  string.hpp
include/runtime/: runtime.hpp
src/: log.hpp
src/compile/: CMakeLists.txt  compiler.cpp  error.hpp  expression.cpp  expression.hpp  object.hpp  parser.hpp  scanner.hpp  statement.cpp  statements.hpp  symbol_table.hpp  token.hpp
src/compile/statements/: function.cpp  if.cpp  import.cpp  return.cpp
src/runtime/: CMakeLists.txt  array.hpp  frame.hpp  interpreter.cpp  interpreter.hpp  runtime.cpp  stack.hpp
src/runtime/core/classes/: integer.cpp  string.cpp
src/shared/: CMakeLists.txt  class.cpp  dis.hpp  func.cpp  instruction_array.cpp  module.cpp  object.cpp  value.cpp
src/shared/test/: instruction_array.cpp
src/test/: main.cpp
src/tools/: disassembler.hpp
test/: add.ks  fib.ks  foo.ks  max.ks  string.ks
